// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`promptAgentKnowledge > should format both files and knowledge bases 1`] = `
"<agent_knowledge>
<instruction>The following files and knowledge bases are available. For files, refer to their content directly. For knowledge bases, use the searchKnowledgeBase tool to find relevant information.</instruction>
<files totalCount="1">
<file id="file1" name="readme.md">
File content here
</file>
</files>
<knowledge_bases totalCount="1">
<knowledge_base id="kb1" name="Internal Docs" description="Company knowledge base" />
</knowledge_bases>
</agent_knowledge>"
`;

exports[`promptAgentKnowledge > should format only files when no knowledge bases 1`] = `
"<agent_knowledge>
<instruction>The following files are available. Refer to their content directly to answer questions. No knowledge bases are associated.</instruction>
<files totalCount="2">
<file id="file1" name="doc1.txt">
This is the content of document 1
</file>
<file id="file2" name="doc2.md">
This is the content of document 2
</file>
</files>
</agent_knowledge>"
`;

exports[`promptAgentKnowledge > should format only knowledge bases when no files 1`] = `
"<agent_knowledge>
<instruction>The following knowledge bases are available for semantic search. Use the searchKnowledgeBase tool to find relevant information.</instruction>
<knowledge_bases totalCount="2">
<knowledge_base id="kb1" name="Documentation" description="API documentation" />
<knowledge_base id="kb2" name="FAQs" />
</knowledge_bases>
</agent_knowledge>"
`;

exports[`promptAgentKnowledge > should handle file with error 1`] = `
"<agent_knowledge>
<instruction>The following files are available. Refer to their content directly to answer questions. No knowledge bases are associated.</instruction>
<files totalCount="1">
<file id="file1" name="missing.txt" error="File not found" />
</files>
</agent_knowledge>"
`;

exports[`promptAgentKnowledge > should handle file with multiline content 1`] = `
"<agent_knowledge>
<instruction>The following files are available. Refer to their content directly to answer questions. No knowledge bases are associated.</instruction>
<files totalCount="1">
<file id="file1" name="multiline.txt">
Line 1
Line 2
Line 3

Line 5 with gap
</file>
</files>
</agent_knowledge>"
`;

exports[`promptAgentKnowledge > should handle file with special characters in filename 1`] = `
"<agent_knowledge>
<instruction>The following files are available. Refer to their content directly to answer questions. No knowledge bases are associated.</instruction>
<files totalCount="1">
<file id="file1" name="file with spaces & special-chars.txt">
Special content
</file>
</files>
</agent_knowledge>"
`;

exports[`promptAgentKnowledge > should handle knowledge base without description 1`] = `
"<agent_knowledge>
<instruction>The following knowledge bases are available for semantic search. Use the searchKnowledgeBase tool to find relevant information.</instruction>
<knowledge_bases totalCount="1">
<knowledge_base id="kb1" name="Simple KB" />
</knowledge_bases>
</agent_knowledge>"
`;

exports[`promptAgentKnowledge > should handle multiple files and multiple knowledge bases 1`] = `
"<agent_knowledge>
<instruction>The following files and knowledge bases are available. For files, refer to their content directly. For knowledge bases, use the searchKnowledgeBase tool to find relevant information.</instruction>
<files totalCount="3">
<file id="file1" name="first.txt">
Content of first file
</file>
<file id="file2" name="second.md">
Content of second file
</file>
<file id="file3" name="broken.pdf" error="Parse error" />
</files>
<knowledge_bases totalCount="3">
<knowledge_base id="kb1" name="Tech Docs" description="Technical documentation" />
<knowledge_base id="kb2" name="User Guides" />
<knowledge_base id="kb3" name="FAQ Database" description="Frequently asked questions" />
</knowledge_bases>
</agent_knowledge>"
`;
